// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`driver-utils Puppeteer Tests Element Marking Functionality should handle hidden elements correctly: hidden-elements-handling 1`] = `
[
  {
    "hasCategory": false,
    "tag": "button",
  },
  {
    "hasCategory": false,
    "tag": "a",
  },
  {
    "hasCategory": false,
    "tag": "input",
  },
]
`;

exports[`driver-utils Puppeteer Tests Element Marking Functionality should mark all supported elements with correct categories: element-categories 1`] = `
[
  {
    "category": "button",
    "index": "0",
    "tag": "button",
  },
  {
    "category": "link",
    "index": "0",
    "tag": "a",
  },
  {
    "category": "input",
    "index": "0",
    "tag": "input",
  },
  {
    "category": "table",
    "index": "0",
    "tag": "table",
  },
  {
    "category": "semantic",
    "index": "0",
    "tag": "nav",
  },
  {
    "category": "list",
    "index": "0",
    "tag": "ul",
  },
]
`;

exports[`driver-utils Puppeteer Tests Element Marking Functionality should mark hidden elements when includeHidden option is true: hidden-elements-included 1`] = `
[
  {
    "category": "button",
    "isHidden": false,
    "tag": "button",
  },
  {
    "category": "link",
    "isHidden": false,
    "tag": "a",
  },
  {
    "category": "input",
    "isHidden": false,
    "tag": "input",
  },
  {
    "category": "table",
    "isHidden": false,
    "tag": "table",
  },
  {
    "category": "semantic",
    "isHidden": false,
    "tag": "nav",
  },
  {
    "category": "list",
    "isHidden": false,
    "tag": "ul",
  },
  {
    "category": "button",
    "isHidden": true,
    "tag": "button",
  },
  {
    "category": "link",
    "isHidden": true,
    "tag": "a",
  },
  {
    "category": "input",
    "isHidden": true,
    "tag": "input",
  },
]
`;

exports[`driver-utils Puppeteer Tests Style Manipulation should apply correct styles to marked elements: applied-styles 1`] = `
[
  {
    "category": "button",
    "computedStyle": {
      "border": "2px outset rgb(0, 0, 0)",
      "margin": "0px",
      "position": "relative",
    },
  },
  {
    "category": "link",
    "computedStyle": {
      "border": "0px none rgb(0, 0, 238)",
      "margin": "0px",
      "position": "relative",
    },
  },
  {
    "category": "input",
    "computedStyle": {
      "border": "2px inset rgb(118, 118, 118)",
      "margin": "0px",
      "position": "relative",
    },
  },
  {
    "category": "table",
    "computedStyle": {
      "border": "0px none rgb(128, 128, 128)",
      "margin": "0px",
      "position": "relative",
    },
  },
  {
    "category": "semantic",
    "computedStyle": {
      "border": "0px none rgb(0, 0, 0)",
      "margin": "0px",
      "position": "relative",
    },
  },
  {
    "category": "list",
    "computedStyle": {
      "border": "0px none rgb(0, 0, 0)",
      "margin": "16px 0px",
      "position": "relative",
    },
  },
  {
    "category": "button",
    "computedStyle": {
      "border": "2px outset rgb(0, 0, 0)",
      "margin": "0px",
      "position": "relative",
    },
  },
  {
    "category": "link",
    "computedStyle": {
      "border": "0px none rgb(0, 0, 238)",
      "margin": "0px",
      "position": "relative",
    },
  },
  {
    "category": "input",
    "computedStyle": {
      "border": "2px inset rgb(118, 118, 118)",
      "margin": "0px",
      "position": "relative",
    },
  },
]
`;

exports[`driver-utils Puppeteer Tests Style Manipulation should properly clean up all applied styles: styles-after-cleanup 1`] = `
{
  "elementsWithComputedStyles": [
    {
      "border": "2px outset rgb(0, 0, 0)",
      "position": "static",
      "tag": "button",
    },
    {
      "border": "0px none rgb(0, 0, 238)",
      "position": "static",
      "tag": "a",
    },
    {
      "border": "2px inset rgb(118, 118, 118)",
      "position": "static",
      "tag": "input",
    },
    {
      "border": "0px none rgb(128, 128, 128)",
      "position": "static",
      "tag": "table",
    },
    {
      "border": "0px none rgb(0, 0, 0)",
      "position": "static",
      "tag": "nav",
    },
    {
      "border": "0px none rgb(0, 0, 0)",
      "position": "static",
      "tag": "ul",
    },
    {
      "border": "2px outset rgb(0, 0, 0)",
      "position": "static",
      "tag": "button",
    },
    {
      "border": "0px none rgb(0, 0, 238)",
      "position": "static",
      "tag": "a",
    },
    {
      "border": "2px inset rgb(118, 118, 118)",
      "position": "static",
      "tag": "input",
    },
  ],
  "styleElementExists": false,
}
`;

exports[`driver-utils Puppeteer Tests View Structure Extraction should generate clean DOM structure with only relevant elements: clean-dom-structure 1`] = `
"<html>
  <head>
  </head>
  <body>
  </body>
</html>
"
`;

exports[`driver-utils Puppeteer Tests View Structure Extraction should preserve allowed attributes and remove others: attribute-filtering 1`] = `
"<html>
  <head>
  </head>
  <body>
  </body>
</html>
"
`;
